--- a/index.html
+++ b/index.html
@@ -12,26 +12,33 @@
   <div class="main-wrapper">
     <div class="header">
       <i class="fas fa-chevron-left"></i>
-      <i class="fas fa-heart"></i>
+      <i class="far fa-heart"></i>
     </div>
     <div class="song-wrapper">
       <div class="song-thumb-wrapper">
         <div class="song-thumb"></div>
       </div>
       <div class="song-info">
-        <span class="song-info-title">Sajna</span><br>
-        <span class="song-info-artist">Yashal Shahid</span><br>
-        <span class="song-info-genre">POP, 2019</span>
+        <span class="song-info-title">Alone</span><br>
+        <span class="song-info-artist">Marshmellow</span><br>
+        <span class="song-info-album">Alone, 2016</span>
       </div>
     </div>
     <div class="player-wrapper">
       <i class="fas fa-circle-notch"></i>
-      <i class="fas fa-step-backward"></i>
-      <i class="fas fa-pause-circle"></i>
-      <i class="fas fa-step-forward"></i>
+      <i class="fas fa-caret-left player-move-btn"></i>
+      <i class="fas fa-pause-circle player-state-btn"></i>
+      <i class="fas fa-caret-right player-move-btn"></i>
       <i class="fas fa-random"></i>
     </div>
-    <div class="volume-wrapper"></div>
+    <div class="volume-wrapper">
+      <i class="fas fa-volume-off"></i>
+      <div class="volume-bar">
+        <div class="main"></div>
+        <div class="current"></div>
+      </div>
+      <i class="fas fa-volume-up"></i>
+    </div>
   </div>
 </body>
 </html>
