Created Song Circular Progress Bar

--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
     </div>
     <div class="song-wrapper">
       <div class="song-thumb-wrapper">
+        <svg class="song-progress" width="200" height="200" viewBox="0 0 200 200">
+          <circle class="song-progress-meter" cx="100" cy="100" r="90" stroke="#4d3f61" stroke-width="10" fill="none" />
+          <circle class="song-progress-value" cx="100" cy="100" r="90" stroke="#ae80d6" stroke-width="10" fill="none" stroke-dasharray="350 300" stroke-linecap="round" />
+        </svg>
         <div class="song-thumb"></div>
       </div>
       <div class="song-info">
