--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
         <div class="song-thumb"></div>
       </div>
       <div class="song-info">
-        <span class="song-info-title">Alone</span><br>
-        <span class="song-info-artist">Marshmellow</span><br>
-        <span class="song-info-album">Alone, 2016</span>
+        <span class="song-info-title"></span><br>
+        <span class="song-info-artist"></span><br>
+        <span class="song-info-album"></span>
       </div>
     </div>
     <div class="player-wrapper">
@@ -78,6 +78,7 @@
 
     var currIndex = 0;
     var isPlaying = false;
+    var isPlayDisabled = true;
     var currSong = new Audio(songsList[currIndex]["link"]);
 
     var songThumb = document.querySelector(".song-thumb");
@@ -90,30 +91,37 @@
     var volumeSlider = document.querySelector("#volume-slider");
     var volumeTrail = document.querySelector(".volume-trail");
 
-    stateButton.classList = "fas fa-spinner player-state-btn player-load-btn";
+    setSong();
 
-    function changeSong() {
-      let currentStatus = isPlaying;
-      if (currentStatus) toggleState();
+    function setSong() {
+      isPlayDisabled = true;
+      isPlaying = false;
+
+      // Set icon to loading
+      stateButton.classList = "fas fa-spinner player-state-btn player-load-btn";
+
+      // Disable play button
+      stateButton.style.cursor = "wait";
+
+      // Set song
       songTitle.innerHTML = songsList[currIndex]["title"];
       songArtist.innerHTML = songsList[currIndex]["artist"];
       songAlbum.innerHTML = songsList[currIndex]["album"];
       songThumb.style.backgroundImage = `url(${songsList[currIndex]["thumb"]})`;
       currSong.src = songsList[currIndex]["link"];
-
-      if (currentStatus) toggleState();
+      currSong.pause();
     }
+
     function nextSong() {
-      currIndex++;
-      if (currIndex >= songsList.length) currIndex = 0;
-      changeSong();
+      currIndex = (currIndex + 1) % songsList.length;
+      setSong();
     }
     function prevSong() {
-      currIndex--;
-      if (currIndex < 0) currIndex = songsList.length - 1;
-      changeSong();
+      currIndex = (currIndex - 1) % songsList.length;
+      setSong();
     }
     function toggleState() {
+      if (isPlayDisabled) return;
       if (isPlaying) {
         currSong.pause();
         stateButton.classList = "fas fa-play-circle player-state-btn";
@@ -133,7 +141,6 @@
         volumeTrail.style.width = "0%";
       volumeSlider.value = currVol;
     }
-    // nextSong();
     currSong.addEventListener('timeupdate', () => {
       let currPosition = currSong.currentTime / currSong.duration * 600;
       if (!isNaN(currPosition))
@@ -141,8 +148,16 @@
       else
         songProgressBar.setAttribute("stroke-dasharray", "0 600");
     });
-    currSong.addEventListener("canplaythrough", event => {
+
+    // Buffer song before playing
+    currSong.addEventListener("canplay", event => {
+      isPlayDisabled = false;
+
+      // Set icon to play
       stateButton.classList = "fas fa-play-circle player-state-btn";
+
+      // Enable play button
+      stateButton.style.cursor = "pointer";
     });  
   </script>
 </body>
