--- a/index.html
+++ b/index.html
@@ -1,164 +1,210 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="style.css">
-  <script src="https://kit.fontawesome.com/e04ccf61b7.js" crossorigin="anonymous"></script>
-  <title>Music Player</title>
-</head>
-<body>
-  <div class="main-wrapper">
-    <div class="header">
-      <i class="fas fa-chevron-left"></i>
-      <i class="far fa-heart"></i>
-    </div>
-    <div class="song-wrapper">
-      <div class="song-thumb-wrapper">
-        <svg class="song-progress" width="200" height="200" viewBox="0 0 200 200">
-          <circle class="song-progress-meter" cx="100" cy="100" r="90" stroke="#4d3f61" stroke-width="10" fill="none" />
-          <circle class="song-progress-value" cx="100" cy="100" r="90" stroke="#ae80d6" stroke-width="10" fill="none" stroke-dasharray="0 600" stroke-linecap="round" />
-        </svg>
-        <div class="song-thumb"></div>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="style.css" />
+    <script
+      src="https://kit.fontawesome.com/e04ccf61b7.js"
+      crossorigin="anonymous"
+    ></script>
+    <title>Music Player</title>
+  </head>
+  <body>
+    <div class="main-wrapper">
+      <div class="header">
+        <i class="fas fa-chevron-left"></i>
+        <i class="far fa-heart"></i>
       </div>
-      <div class="song-info">
-        <span class="song-info-title"></span><br>
-        <span class="song-info-artist"></span><br>
-        <span class="song-info-album"></span>
+      <div class="song-wrapper">
+        <div class="song-thumb-wrapper">
+          <svg
+            class="song-progress"
+            width="200"
+            height="200"
+            viewBox="0 0 200 200"
+          >
+            <circle
+              class="song-progress-meter"
+              cx="100"
+              cy="100"
+              r="90"
+              stroke="#4d3f61"
+              stroke-width="10"
+              fill="none"
+            />
+            <circle
+              class="song-progress-value"
+              cx="100"
+              cy="100"
+              r="90"
+              stroke="#ae80d6"
+              stroke-width="10"
+              fill="none"
+              stroke-dasharray="0 600"
+              stroke-linecap="round"
+            />
+          </svg>
+          <div class="song-thumb"></div>
+        </div>
+        <div class="song-info">
+          <span class="song-info-title"></span><br />
+          <span class="song-info-artist"></span><br />
+          <span class="song-info-album"></span>
+        </div>
+      </div>
+      <div class="player-wrapper">
+        <i class="fas fa-circle-notch"></i>
+        <i class="fas fa-caret-left player-move-btn" onclick="prevSong()"></i>
+        <i
+          class="fas fa-play-circle player-state-btn"
+          onclick="toggleState()"
+        ></i>
+        <i class="fas fa-caret-right player-move-btn" onclick="nextSong()"></i>
+        <i class="fas fa-random"></i>
+      </div>
+      <div class="volume-wrapper">
+        <i
+          class="fas fa-volume-off"
+          style="text-align: right"
+          onclick="adjustVolume(0)"
+        ></i>
+        <div class="volume-bar">
+          <input
+            type="range"
+            name="volume-slider"
+            id="volume-slider"
+            min="0"
+            max="1"
+            step="0.1"
+            value="0.5"
+            onchange="adjustVolume(event.target.value)"
+          />
+          <div class="volume-trail"></div>
+        </div>
+        <i class="fas fa-volume-up" onclick="adjustVolume(1)"></i>
       </div>
     </div>
-    <div class="player-wrapper">
-      <i class="fas fa-circle-notch"></i>
-      <i class="fas fa-caret-left player-move-btn" onclick="prevSong()"></i>
-      <i class="fas fa-play-circle player-state-btn" onclick="toggleState()"></i>
-      <i class="fas fa-caret-right player-move-btn" onclick="nextSong()"></i>
-      <i class="fas fa-random"></i>
-    </div>
-    <div class="volume-wrapper">
-      <i class="fas fa-volume-off" style="text-align: right" onclick="adjustVolume(0)"></i>
-      <div class="volume-bar">
-        <input type="range" name="volume-slider" id="volume-slider" min="0" max="1" step="0.1" value="0.5" onchange="adjustVolume(event.target.value)">
-        <div class="volume-trail"></div>
-      </div>
-      <i class="fas fa-volume-up" onclick="adjustVolume(1)"></i>
-    </div>
-  </div>
-  <script>
-    var songsList = [
-      {
-        "title": "Alone",
-        "artist": "Marshmellow",
-        "album": "Alone (The Remixes), 2016",
-        "link": "http://dl.tak3da.ir/download/1395/03/Marshmello%20-%20Alone%20[320].mp3",
-        "thumb": "img.jpg"
-      },
-      {
-        "title": "Señorita",
-        "artist": "Shawn Mendes, Camila Cabello",
-        "album": "Shawn Mendes, 2018",
-        "link": "http://mysound.ge/uploads/tracks/2135911823_315158852_1994375449.mp3",
-        "thumb": "https://a10.gaanacdn.com/images/albums/72/2657072/crop_175x175_2657072.jpg"
-      },
-      {
-        "title": "Wake Me Up",
-        "artist": "Avicii",
-        "album": "True, 2013",
-        "link": "http://mysound.ge/uploads/tracks/1932929623_1281390459_1755572096.mp3",
-        "thumb": "https://i1.sndcdn.com/artworks-000143888529-4mwefu-t500x500.jpg"
-      },
-      {
-        "title": "New Rules",
-        "artist": "Dua Lipa",
-        "album": "Dua Lipa, 2017",
-        "link": "http://mysound.ge/uploads/tracks/729760672_1526780201_1460816669.mp3",
-        "thumb": "https://a10.gaanacdn.com/images/albums/47/1908547/crop_175x175_1908547.jpg"
-      },
-    ];
+    <script>
+      var songsList = [
+        {
+          title: "Alone",
+          artist: "Marshmellow",
+          album: "Alone (The Remixes), 2016",
+          link: "http://dl.tak3da.ir/download/1395/03/Marshmello%20-%20Alone%20[320].mp3",
+          thumb: "img.jpg",
+        },
+        {
+          title: "Señorita",
+          artist: "Shawn Mendes, Camila Cabello",
+          album: "Shawn Mendes, 2018",
+          link: "http://mysound.ge/uploads/tracks/2135911823_315158852_1994375449.mp3",
+          thumb:
+            "https://a10.gaanacdn.com/images/albums/72/2657072/crop_175x175_2657072.jpg",
+        },
+        {
+          title: "Wake Me Up",
+          artist: "Avicii",
+          album: "True, 2013",
+          link: "http://mysound.ge/uploads/tracks/1932929623_1281390459_1755572096.mp3",
+          thumb:
+            "https://i1.sndcdn.com/artworks-000143888529-4mwefu-t500x500.jpg",
+        },
+        {
+          title: "New Rules",
+          artist: "Dua Lipa",
+          album: "Dua Lipa, 2017",
+          link: "http://mysound.ge/uploads/tracks/729760672_1526780201_1460816669.mp3",
+          thumb:
+            "https://a10.gaanacdn.com/images/albums/47/1908547/crop_175x175_1908547.jpg",
+        },
+      ];
 
-    var currIndex = 0;
-    var isPlaying = false;
-    var isPlayDisabled = true;
-    var currSong = new Audio(songsList[currIndex]["link"]);
+      var currIndex = 0;
+      var isPlaying = false;
+      var isPlayDisabled = true;
+      var currSong = new Audio(songsList[currIndex]["link"]);
 
-    var songThumb = document.querySelector(".song-thumb");
-    var songTitle = document.querySelector(".song-info-title");
-    var songArtist = document.querySelector(".song-info-artist");
-    var songAlbum = document.querySelector(".song-info-album");
+      var songThumb = document.querySelector(".song-thumb");
+      var songTitle = document.querySelector(".song-info-title");
+      var songArtist = document.querySelector(".song-info-artist");
+      var songAlbum = document.querySelector(".song-info-album");
 
-    var stateButton = document.querySelector(".player-state-btn");
-    var songProgressBar = document.querySelector(".song-progress-value");
-    var volumeSlider = document.querySelector("#volume-slider");
-    var volumeTrail = document.querySelector(".volume-trail");
+      var stateButton = document.querySelector(".player-state-btn");
+      var songProgressBar = document.querySelector(".song-progress-value");
+      var volumeSlider = document.querySelector("#volume-slider");
+      var volumeTrail = document.querySelector(".volume-trail");
 
-    setSong();
-
-    function setSong() {
-      isPlayDisabled = true;
-      isPlaying = false;
-
-      // Set icon to loading
-      stateButton.classList = "fas fa-spinner player-state-btn player-load-btn";
-
-      // Disable play button
-      stateButton.style.cursor = "wait";
-
-      // Set song
-      songTitle.innerHTML = songsList[currIndex]["title"];
-      songArtist.innerHTML = songsList[currIndex]["artist"];
-      songAlbum.innerHTML = songsList[currIndex]["album"];
-      songThumb.style.backgroundImage = `url(${songsList[currIndex]["thumb"]})`;
-      currSong.src = songsList[currIndex]["link"];
-      currSong.pause();
-    }
-
-    function nextSong() {
-      currIndex = (currIndex + 1) % songsList.length;
       setSong();
-    }
-    function prevSong() {
-      currIndex = (currIndex - 1) % songsList.length;
-      setSong();
-    }
-    function toggleState() {
-      if (isPlayDisabled) return;
-      if (isPlaying) {
+
+      function setSong() {
+        isPlayDisabled = true;
+        isPlaying = false;
+
+        // Set icon to loading
+        stateButton.classList =
+          "fas fa-spinner player-state-btn player-load-btn";
+
+        // Disable play button
+        stateButton.style.cursor = "wait";
+
+        // Set song
+        songTitle.innerHTML = songsList[currIndex]["title"];
+        songArtist.innerHTML = songsList[currIndex]["artist"];
+        songAlbum.innerHTML = songsList[currIndex]["album"];
+        songThumb.style.backgroundImage = `url(${songsList[currIndex]["thumb"]})`;
+        currSong.src = songsList[currIndex]["link"];
         currSong.pause();
+      }
+
+      function nextSong() {
+        currIndex = (currIndex + 1) % songsList.length;
+        setSong();
+      }
+      function prevSong() {
+        currIndex = (currIndex - 1) % songsList.length;
+        setSong();
+      }
+      function toggleState() {
+        if (isPlayDisabled) return;
+        if (isPlaying) {
+          currSong.pause();
+          stateButton.classList = "fas fa-play-circle player-state-btn";
+        } else {
+          currSong.play();
+          stateButton.classList = "fas fa-pause-circle player-state-btn";
+        }
+        isPlaying = !isPlaying;
+      }
+      function adjustVolume(currVol) {
+        currSong.volume = currVol;
+        console.log(currVol, currVol !== "0", currVol !== 0);
+        if (currVol !== "0" && currVol !== 0)
+          volumeTrail.style.width = `${currVol * 100 - 2}%`;
+        else volumeTrail.style.width = "0%";
+        volumeSlider.value = currVol;
+      }
+      currSong.addEventListener("timeupdate", () => {
+        let currPosition = (currSong.currentTime / currSong.duration) * 600;
+        if (!isNaN(currPosition))
+          songProgressBar.setAttribute(
+            "stroke-dasharray",
+            `${currPosition} ${600 - currPosition}`
+          );
+        else songProgressBar.setAttribute("stroke-dasharray", "0 600");
+      });
+
+      // Buffer song before playing
+      currSong.addEventListener("canplay", (event) => {
+        isPlayDisabled = false;
+
+        // Set icon to play
         stateButton.classList = "fas fa-play-circle player-state-btn";
-      }
-      else {
-        currSong.play();
-        stateButton.classList = "fas fa-pause-circle player-state-btn";
-      }
-      isPlaying = !isPlaying;
-    }
-    function adjustVolume(currVol) {
-      currSong.volume = currVol;
-      console.log(currVol, currVol !== "0", currVol !== 0);
-      if (currVol !== "0" && currVol !== 0)
-        volumeTrail.style.width = `${currVol * 100 - 2}%`;
-      else
-        volumeTrail.style.width = "0%";
-      volumeSlider.value = currVol;
-    }
-    currSong.addEventListener('timeupdate', () => {
-      let currPosition = currSong.currentTime / currSong.duration * 600;
-      if (!isNaN(currPosition))
-        songProgressBar.setAttribute("stroke-dasharray", `${currPosition} ${600-currPosition}`);
-      else
-        songProgressBar.setAttribute("stroke-dasharray", "0 600");
-    });
 
-    // Buffer song before playing
-    currSong.addEventListener("canplay", event => {
-      isPlayDisabled = false;
-
-      // Set icon to play
-      stateButton.classList = "fas fa-play-circle player-state-btn";
-
-      // Enable play button
-      stateButton.style.cursor = "pointer";
-    });  
-  </script>
-</body>
+        // Enable play button
+        stateButton.style.cursor = "pointer";
+      });
+    </script>
+  </body>
 </html>
